# Computacion_Paralela_Distribuida

./: .clang-format  .gitignore  CMakeLists.txt  README.md
benchmarks/: CMakeLists.txt  main_bm.cpp
sensores/: CMakeLists.txt  paralela_tree.cpp  paralela_tree.h  sensor_tree.cpp  sensor_tree.h  sequential_tree.cpp  sequential_tree.h
tests/: CMakeLists.txt  validation_test.cpp
