FILE(GLOB_RECURSE ALL_LIB_CPP *.cpp)

FIND_PACKAGE(OpenMP REQUIRED)

ADD_LIBRARY(sensores
  ${ALL_LIB_CPP}
)

SET_TARGET_PROPERTIES(sensores PROPERTIES LINKER_LANGUAGE CXX)

IF(OpenMP_CXX_FOUND)
  TARGET_LINK_LIBRARIES(sensores OpenMP::OpenMP_CXX)
ENDIF()

TARGET_LINK_LIBRARIES(sensores
  ${DEPS}
)
